# django_docker-compose_mysql_postgresql

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/: admin.py  document.py  forms.py  models.py  urls.py  views.py
django_docker/: settings.py  urls.py
