[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = ""
authors = ["nusratullo2004 <122892486+nusratullo2004@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"
pymysql = "^1.0.3"
psycopg2-binary = "^2.9.6"
cryptography = "^40.0.2"
mysql-connector-python = "^8.0.33"
django-mysql = "^4.9.0"
django-elasticsearch-dsl = "^7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
